# mistral_ner

./: .env.example  .gitignore  Dockerfile  LICENSE  PROJECT_PLAN.md  README.md  SETUP.md  check_deps.py  environment-cuda11.yml  environment-cuda12.yml  finetune_conll2023.py  main.py  mkdocs.yml  pyproject.toml  setup_env.py  test_run.py  test_simple.py  test_simple_coverage.py
.github/codeql/: codeql-config.yml
.github/workflows/: DEPLOY_SETUP.md  ci.yml  codeql.yml  deploy.yml  docs.yml  train.yml
api/: __init__.py  serve.py
configs/: 8bit_quantization.yaml  bank_pii.yaml  default.yaml  hyperopt.yaml  multi_dataset.yaml  multi_dataset_extended.yaml  offline.yaml  validation_config.yaml
configs/mappings/: ai4privacy_bank_pii.yaml  conll2003_bank_pii.yaml  gretel_pii_bank.yaml  ontonotes_bank_pii.yaml
docs/: HYPERPARAMETER_OPTIMIZATION.md  VALIDATION.md  WANDB_OFFLINE.md  checkpoint_saving_loading.md  index.md
docs/api-reference/: overview.md
docs/getting-started/: first-training.md  installation.md  quickstart.md
docs/reference/: changelog.md  troubleshooting.md  validation.md
docs/stylesheets/: extra.css
docs/user-guide/: configuration.md  datasets.md  hyperparameter-tuning.md  loss-functions.md
scripts/: __init__.py  create_accelerate_config.py  hyperopt.py  inference.py  sync_wandb.py  train.py  train.sh  train_bank_pii.sh  validate.py
src/: __init__.py  batch_balancing.py  config.py  data.py  evaluation.py  losses.py  model.py  schedulers.py  training.py  utils.py  visualization.py
src/datasets/: __init__.py  base.py  label_mapper.py  mapping_profiles.py  mixers.py  multi_dataset.py  registry.py  samplers.py
src/datasets/loaders/: __init__.py  ai4privacy.py  bigcode_pii.py  conll.py  fewnerd.py  gretel_pii.py  mendeley_pii.py  ontonotes.py  wikiner.py  wnut.py
src/hyperopt/: __init__.py  config.py  optimizer.py  utils.py
tests/: __init__.py  test_api_serve.py  test_batch_balancing.py  test_class_weighting.py  test_config.py  test_coverage_simple.py  test_data.py  test_data_coverage.py  test_data_uncovered.py  test_dataset_core.py  test_dataset_loaders.py  test_evaluation.py  test_evaluation_coverage.py  test_fewnerd_coverage.py  test_hyperopt_config.py  test_hyperopt_integration.py  test_hyperopt_optimizer.py  test_hyperopt_utils.py  test_label_mapper.py  test_label_mapping.py  test_losses.py  test_main.py  test_model.py  test_multi_dataset.py  test_multi_dataset_comprehensive.py  test_new_datasets.py  test_original_dataset_loaders.py  test_performance_regression.py  test_regression_model.py  test_samplers_comprehensive.py  test_schedulers.py  test_scripts_hyperopt_minimal.py  test_scripts_inference.py  test_scripts_sync_wandb.py  test_scripts_train.py  test_scripts_validate.py  test_test_run.py  test_training.py  test_training_coverage.py  test_utils.py  (+1 more)
tests/fixtures/: regression_test_cases.json
